<?xml version="1.0" encoding="UTF-8"?>
<package>
    <name>viam_rover</name>
    <version>0.0.1</version>
    <description>A package for control of a viam rover</description>
    <maintainer email="jack@jacktcollins.com">Jack Collins</maintainer>
    <license>MIT</license>
    <buildtool_depend>catkin</buildtool_depend>
    
    <!-- Add any dependencies here -->
    <!-- <build_depend>package_name</build_depend> -->
    <!-- <run_depend>package_name</run_depend> -->
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>

    <!-- Add any exported packages here -->
    <!-- <export> -->
    <!--   <package name="panda_data" /> -->
    <!-- </export> -->
</package>